--- a/apps/game/app/app.css
+++ b/apps/game/app/app.css
@@ -1,16 +1,6 @@
 @import "tailwindcss";
-/* @plugin "daisyui"; */
 
-@theme {
-  --font-sans: "Inter", ui-sans-serif, system-ui, sans-serif,
-    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+@plugin "daisyui" {
+  /* biome-ignore lint/correctness/noUnknownProperty: use custom directives */
+  themes: light --default, black --prefersdark, winter;
 }
-
-/* html,
-body {
-  @apply bg-white dark:bg-gray-950;
-
-  @media (prefers-color-scheme: dark) {
-    color-scheme: dark;
-  }
-} */
